# icdi-greenbim-tool

./: .gitignore  README.md  pyproject.toml
src/icdi_greenbim_tool/: __init__.py  cli.py
src/icdi_greenbim_tool/crawlers/: __init__.py
src/icdi_greenbim_tool/crawlers/codis_crawlers/: __init__.py  codis_crawler_tojson.py
