[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icdi-greenbim-tool"
version = "0.1.0"
description = "ICDI GreenBIM Tool"
readme = "README.md"
authors = [
    { name = "Lucy Lee", email = "lucy@icdi.asia" }
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "typer>=0.9.0",  
    "typer-cli>=0.0.13",
    "typer-slim>=0.0.13",
	"typing_extensions>=4.0.0",
]
keywords = ["bim", "energy", "crawler", "green-building"]

[project.scripts]
icdi-tool = "icdi_greenbim_tool.cli:app"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }

[project.urls]
Homepage = "https://github.com/ICDIservice/icdi-greenbim-tool"
Repository = "https://github.com/ICDIservice/icdi-greenbim-tool"
Issues = "https://github.com/ICDIservice/icdi-greenbim-tool/issues"